tests/ui/issues/issue-123529.stderr
error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/issue-123529.rs:2:5
   |
LL |     pub fn test() {}
   |     ^^^
   |
   = help: remove the qualifier
   = note: trait items always share the visibility of their trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0449`.
